[package]
name = "snarkvm-algorithms-cuda"
version = "0.14.5"
authors = [ "The Aleo Team <hello@aleo.org>" ]
description = "Cuda optimizations for a decentralized virtual machine"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkVM"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge"
]
categories = [
  "compilers",
  "cryptography",
  "mathematics",
  "wasm",
  "web-programming"
]
include = [ "Cargo.toml", "src", "README.md", "LICENSE.md" ]
license = "Apache-2.0"
edition = "2021"

[features]
default = [ ]
portable = [ "blst/portable" ]
quiet = [ ]

[dependencies.blst]
#version = "0.3.9"
git = "https://github.com/supranational/blst"
rev = "5aa7ce1"
features = [ ]

[dependencies.sppark]
#version = "0.1.3"
git = "https://github.com/supranational/sppark"
rev = "080dc82"

[build-dependencies.cc]
version = "^1.0.79"

[build-dependencies.which]
version = "^4.4"
